// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Initial Rendering > should render settings list with visual indicators 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               false  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'accessibility settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               true*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'all boolean settings disabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                              false*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                              false*  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                               false*  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and…           │
│                                                                                                  │
│    Hide Window Title                                                                     false*  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                             false*  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'default state' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               false  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'file filtering settings configured' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               false  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'focused on scope selector' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│    Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│    Vim Mode                                                                               false  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│  > Apply To                                                                                      │
│  ● 1. User Settings                                                                              │
│    2. Workspace Settings                                                                         │
│    3. System Settings                                                                            │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'mixed boolean and number settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                              false*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                     false*  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'tools and security settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               false  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               false  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                false  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      false  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              false  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'various boolean settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Vim Mode                                                                               true*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Enable Prompt Completion                                                               true*  │
│    Enable AI-powered prompt completion suggestions while typing.                                 │
│                                                                                                  │
│    Debug Keystroke Logging                                                                true*  │
│    Log raw terminal input and parsed keys locally for diagnostics. Prompt, paste, and …          │
│                                                                                                  │
│    Hide Window Title                                                                      true*  │
│    Hide the window title bar                                                                     │
│                                                                                                  │
│    Reasoning                                                                               Auto  │
│    Choose the default reasoning visibility. Individual blocks can be toggled by click.           │
│                                                                                                  │
│    Dynamic Window Title                                                                    true  │
│    Update the terminal window title with current status icons (Ready: ◇, Action Require…         │
│                                                                                                  │
│    Show Home Directory Warning                                                             true  │
│    Show a warning when running DSH Console in the home directory.                                │
│                                                                                                  │
│    Hide Tips                                                                              true*  │
│    Hide helpful tips in the UI                                                                   │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
